# marathon_cuda

./: CMakeLists.txt  README.md  build_settings.md  kernel.cuh  test.json
lib/jsonxx/: json_parser.hpp
src/: kernel.cu  kernel.cuh  main.cu  render.cu  render.cuh
src/utils/: camera.hpp  const.hpp  parser.hpp  render_setting.hpp  scene.cpp  scene.hpp  util_funcs.hpp
